--- a/01-animated-accordion/style.css
+++ b/01-animated-accordion/style.css
@@ -120,3 +120,10 @@ body {
   font-weight: 300;
   margin: 2rem 0;
 }
+
+@media (max-width: 537px) {
+  .accordion-content p {
+    font-size: 0.8rem;
+    font-weight: 500;
+  }
+}
